# GerasDB

./: .gitignore  Cargo.toml  README.md  demo.sqlite3
dbs/: hereIsRoomForTheTestDBs.md
docs/: data-schema.md
src/: db_layer.rs  initialize_db.rs  lib.rs
